// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render failed state of recovery codes dialog 1`] = `
.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c7 a {
  color: #FFFFFF;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c8 {
  box-sizing: border-box;
  margin-top: 16px;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 8px;
}

.c9:hover,
.c9:focus {
  background: #B29DFF;
}

.c9:active {
  background: #C5B6FF;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c10:hover,
.c10:focus {
  background: rgba(255,255,255,0.13);
}

.c10:active {
  background: rgba(255,255,255,0.18);
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c5 {
  display: flex;
  align-items: center;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6"
          color="text.main"
        >
          An error has occurred
        </div>
      </div>
      <div
        class="c7"
        kind="danger"
      >
        failed to generate recovery codes
      </div>
      <div
        class="c8"
      >
        <button
          class="c9"
          kind="primary"
        >
          Try again
        </button>
        <button
          class="c10"
          kind="secondary"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render successful first timer recovery codes dialog 1`] = `
.c4 {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 750px;
}

.c8 {
  box-sizing: border-box;
  padding: 24px;
  flex: 4;
}

.c13 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #000000;
  border-radius: 4px;
}

.c18 {
  box-sizing: border-box;
  align-self: start;
}

.c23 {
  box-sizing: border-box;
  min-width: 384px;
  padding: 24px;
  flex: 2;
}

.c22 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 100%;
}

.c22:hover,
.c22:focus {
  background: #B29DFF;
}

.c22:active {
  background: #C5B6FF;
}

.c22:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c16 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 24px;
  height: 48px;
  width: 48px;
}

.c16:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c16:not(:disabled):hover,
.c16:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c16:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c17 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c9 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 24px;
  color: #FFFFFF;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 4px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
  margin: 0px;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 0px;
}

.c25 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c7 {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.c14 {
  display: flex;
  justify-content: space-between;
  gap: 8px;
}

.c15 {
  display: flex;
  flex-direction: row;
  gap: 8px;
}

.c19 {
  display: flex;
  align-items: center;
  gap: 8px;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  padding: 0px;
  background: none;
}

.c20 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 16px;
  height: 16px;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 2px;
  background: transparent;
  position: relative;
}

.c20:checked {
  border: 1px solid #9F85FF;
  background-color: #9F85FF;
}

.c20:hover {
  cursor: pointer;
}

.c20::before {
  content: '';
  display: block;
}

.c20:checked::before {
  content: '✓';
  color: #000000;
  position: absolute;
  right: 1px;
  top: -1px;
}

.c5 .print-only {
  display: none;
}

@media print {
  .c5 .print-only {
    display: initial;
  }

  .c5 .no-print {
    display: none;
  }

  .c5 .no-print-border {
    border: none;
    box-shadow: none;
  }

  .c5 .codes {
    font-size: 16px;
  }
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
          width="750px"
        >
          <div
            class="c8 c9 no-print-border"
          >
            <div
              class="c10"
              color="text.main"
            >
              Backup & Recovery Codes
            </div>
            <div
              class="c4 c7"
            >
              <div
                class="c4"
              >
                <div
                  class="c11"
                >
                  Save these account recovery codes in a safe offline place. You can use each code once if you lose your second factor authenticator or password.
                </div>
              </div>
              <div
                class="c4"
              >
                <div
                  class="c12"
                >
                  Recovery Codes (
                  3
                   Total)
                </div>
                <div
                  class="c13 c14"
                >
                  <div
                    class="c11"
                    style="white-space: pre-wrap;"
                  >
                    tele-testword-testword-testword-testword-testword-testword-testword

tele-testword-testword-testword-testword-testword-testword-testword

tele-testword-testword-testword-testword-testword-testword-testword
                  </div>
                  <div
                    class="c4 c15 no-print"
                  >
                    <button
                      class="c16"
                      size="2"
                    >
                      <span
                        class="c17 icon icon-copy"
                      >
                        <svg
                          fill="currentColor"
                          height="24"
                          viewBox="0 0 24 24"
                          width="24"
                        >
                          <path
                            d="M6.75 3C6.33579 3 6 3.33579 6 3.75C6 4.16421 6.33579 4.5 6.75 4.5H19.5V17.25C19.5 17.6642 19.8358 18 20.25 18C20.6642 18 21 17.6642 21 17.25V3.75C21 3.33579 20.6642 3 20.25 3H6.75Z"
                          />
                          <path
                            clip-rule="evenodd"
                            d="M3.75 6C3.33579 6 3 6.33579 3 6.75V20.25C3 20.6642 3.33579 21 3.75 21H17.25C17.6642 21 18 20.6642 18 20.25V6.75C18 6.33579 17.6642 6 17.25 6H3.75ZM4.5 19.5V7.5H16.5V19.5H4.5Z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <button
                      class="c16"
                      size="2"
                    >
                      <span
                        class="c17 icon icon-printer"
                      >
                        <svg
                          fill="currentColor"
                          height="24"
                          viewBox="0 0 24 24"
                          width="24"
                        >
                          <path
                            d="M18.5625 10.875C18.5625 11.3928 18.1428 11.8125 17.625 11.8125C17.1072 11.8125 16.6875 11.3928 16.6875 10.875C16.6875 10.3572 17.1072 9.9375 17.625 9.9375C18.1428 9.9375 18.5625 10.3572 18.5625 10.875Z"
                          />
                          <path
                            clip-rule="evenodd"
                            d="M6 3C5.58579 3 5.25 3.33579 5.25 3.75V6.75H3.87469C2.62094 6.75 1.5 7.70164 1.5 9V16.5C1.5 16.9142 1.83579 17.25 2.25 17.25H5.25V20.25C5.25 20.6642 5.58579 21 6 21H18C18.4142 21 18.75 20.6642 18.75 20.25V17.25H21.75C22.1642 17.25 22.5 16.9142 22.5 16.5V9C22.5 7.70164 21.3791 6.75 20.1253 6.75H18.75V3.75C18.75 3.33579 18.4142 3 18 3H6ZM3 9C3 8.64086 3.33406 8.25 3.87469 8.25H20.1253C20.6659 8.25 21 8.64086 21 9V15.75H18.75V14.25C18.75 13.8358 18.4142 13.5 18 13.5H6C5.58579 13.5 5.25 13.8358 5.25 14.25V15.75H3V9ZM6.75 6.75H17.25V4.5H6.75V6.75ZM6.75 15H17.25V19.5H6.75V15Z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="c11 print-only"
              >
                Created: Fri Aug 30 2019 11:00:00 GMT+0000 (Coordinated Universal Time)
              </div>
              <label
                class="c18 c19 no-print"
              >
                <input
                  class="c20"
                  type="checkbox"
                />
                <div
                  class="c21"
                >
                  I have saved my recovery codes
                </div>
              </label>
              <button
                class="c22 no-print"
                disabled=""
                kind="primary"
                width="100%"
              >
                Close dialog
              </button>
            </div>
          </div>
          <div
            class="c23 c9 no-print"
          >
            <div
              class="c4 c7"
            >
              <div
                class="c4"
              >
                <div
                  class="c24"
                >
                  1. Why do I need these codes?
                </div>
                <div
                  class="c25"
                  color="text.slightlyMuted"
                >
                  Use them in the event of losing your password or two-factor device.
                </div>
              </div>
              <div
                class="c4"
              >
                <div
                  class="c24"
                >
                  2. How long do the codes last for?
                </div>
                <div
                  class="c25"
                  color="text.slightlyMuted"
                >
                  Recovery codes can only be used once. After recovering your account, we will generate a new set of codes for you.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render successful recovery codes dialog 1`] = `
.c4 {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 750px;
}

.c8 {
  box-sizing: border-box;
  padding: 24px;
  flex: 4;
}

.c13 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #000000;
  border-radius: 4px;
}

.c18 {
  box-sizing: border-box;
  align-self: start;
}

.c23 {
  box-sizing: border-box;
  min-width: 384px;
  padding: 24px;
  flex: 2;
}

.c22 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 100%;
}

.c22:hover,
.c22:focus {
  background: #B29DFF;
}

.c22:active {
  background: #C5B6FF;
}

.c22:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c16 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 24px;
  height: 48px;
  width: 48px;
}

.c16:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c16:not(:disabled):hover,
.c16:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c16:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c17 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c9 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 24px;
  color: #FFFFFF;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 4px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
  margin: 0px;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 0px;
}

.c25 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c7 {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.c14 {
  display: flex;
  justify-content: space-between;
  gap: 8px;
}

.c15 {
  display: flex;
  flex-direction: row;
  gap: 8px;
}

.c19 {
  display: flex;
  align-items: center;
  gap: 8px;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  padding: 0px;
  background: none;
}

.c20 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 16px;
  height: 16px;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 2px;
  background: transparent;
  position: relative;
}

.c20:checked {
  border: 1px solid #9F85FF;
  background-color: #9F85FF;
}

.c20:hover {
  cursor: pointer;
}

.c20::before {
  content: '';
  display: block;
}

.c20:checked::before {
  content: '✓';
  color: #000000;
  position: absolute;
  right: 1px;
  top: -1px;
}

.c5 .print-only {
  display: none;
}

@media print {
  .c5 .print-only {
    display: initial;
  }

  .c5 .no-print {
    display: none;
  }

  .c5 .no-print-border {
    border: none;
    box-shadow: none;
  }

  .c5 .codes {
    font-size: 16px;
  }
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
          width="750px"
        >
          <div
            class="c8 c9 no-print-border"
          >
            <div
              class="c10"
              color="text.main"
            >
              New Backup & Recovery Codes
            </div>
            <div
              class="c4 c7"
            >
              <div
                class="c4"
              >
                <div
                  class="c11"
                >
                  Save these account recovery codes in a safe offline place. You can use each code once if you lose your second factor authenticator or password.
                </div>
              </div>
              <div
                class="c4"
              >
                <div
                  class="c12"
                >
                  Recovery Codes (
                  3
                   Total)
                </div>
                <div
                  class="c13 c14"
                >
                  <div
                    class="c11"
                    style="white-space: pre-wrap;"
                  >
                    tele-testword-testword-testword-testword-testword-testword-testword

tele-testword-testword-testword-testword-testword-testword-testword

tele-testword-testword-testword-testword-testword-testword-testword
                  </div>
                  <div
                    class="c4 c15 no-print"
                  >
                    <button
                      class="c16"
                      size="2"
                    >
                      <span
                        class="c17 icon icon-copy"
                      >
                        <svg
                          fill="currentColor"
                          height="24"
                          viewBox="0 0 24 24"
                          width="24"
                        >
                          <path
                            d="M6.75 3C6.33579 3 6 3.33579 6 3.75C6 4.16421 6.33579 4.5 6.75 4.5H19.5V17.25C19.5 17.6642 19.8358 18 20.25 18C20.6642 18 21 17.6642 21 17.25V3.75C21 3.33579 20.6642 3 20.25 3H6.75Z"
                          />
                          <path
                            clip-rule="evenodd"
                            d="M3.75 6C3.33579 6 3 6.33579 3 6.75V20.25C3 20.6642 3.33579 21 3.75 21H17.25C17.6642 21 18 20.6642 18 20.25V6.75C18 6.33579 17.6642 6 17.25 6H3.75ZM4.5 19.5V7.5H16.5V19.5H4.5Z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <button
                      class="c16"
                      size="2"
                    >
                      <span
                        class="c17 icon icon-printer"
                      >
                        <svg
                          fill="currentColor"
                          height="24"
                          viewBox="0 0 24 24"
                          width="24"
                        >
                          <path
                            d="M18.5625 10.875C18.5625 11.3928 18.1428 11.8125 17.625 11.8125C17.1072 11.8125 16.6875 11.3928 16.6875 10.875C16.6875 10.3572 17.1072 9.9375 17.625 9.9375C18.1428 9.9375 18.5625 10.3572 18.5625 10.875Z"
                          />
                          <path
                            clip-rule="evenodd"
                            d="M6 3C5.58579 3 5.25 3.33579 5.25 3.75V6.75H3.87469C2.62094 6.75 1.5 7.70164 1.5 9V16.5C1.5 16.9142 1.83579 17.25 2.25 17.25H5.25V20.25C5.25 20.6642 5.58579 21 6 21H18C18.4142 21 18.75 20.6642 18.75 20.25V17.25H21.75C22.1642 17.25 22.5 16.9142 22.5 16.5V9C22.5 7.70164 21.3791 6.75 20.1253 6.75H18.75V3.75C18.75 3.33579 18.4142 3 18 3H6ZM3 9C3 8.64086 3.33406 8.25 3.87469 8.25H20.1253C20.6659 8.25 21 8.64086 21 9V15.75H18.75V14.25C18.75 13.8358 18.4142 13.5 18 13.5H6C5.58579 13.5 5.25 13.8358 5.25 14.25V15.75H3V9ZM6.75 6.75H17.25V4.5H6.75V6.75ZM6.75 15H17.25V19.5H6.75V15Z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="c11 print-only"
              >
                Created: Fri Aug 30 2019 11:00:00 GMT+0000 (Coordinated Universal Time)
              </div>
              <label
                class="c18 c19 no-print"
              >
                <input
                  class="c20"
                  type="checkbox"
                />
                <div
                  class="c21"
                >
                  I have saved my new recovery codes
                </div>
              </label>
              <button
                class="c22 no-print"
                disabled=""
                kind="primary"
                width="100%"
              >
                Close dialog
              </button>
            </div>
          </div>
          <div
            class="c23 c9 no-print"
          >
            <div
              class="c4 c7"
            >
              <div
                class="c4"
              >
                <div
                  class="c24"
                >
                  1. Why do I need these codes?
                </div>
                <div
                  class="c25"
                  color="text.slightlyMuted"
                >
                  Use them in the event of losing your password or two-factor device.
                </div>
              </div>
              <div
                class="c4"
              >
                <div
                  class="c24"
                >
                  2. How long do the codes last for?
                </div>
                <div
                  class="c25"
                  color="text.slightlyMuted"
                >
                  Recovery codes can only be used once. After recovering your account, we will generate a new set of codes for you.
                </div>
              </div>
              <div
                class="c4"
              >
                <div
                  class="c24"
                >
                  3. What about my old codes?
                </div>
                <div
                  class="c25"
                  color="text.slightlyMuted"
                >
                  Your old recovery codes are no longer valid, please replace them with these new ones.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
